# Scriptorium

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  README.md  SECURITY.md  com.github.cgueret.Scriptorium.json  ideas.md  io.github.cgueret.Scriptorium.json  meson.build  python3-EbookLib.json  python3-GitPython.json  python3-Jinja2.json  python3-beautifulsoup4.json  settings.json
.flatpak/: meson.sh
.github/: FUNDING.yml
.github/workflows/: macos-build.yml
data/: com.github.cgueret.Scriptorium.desktop.in  com.github.cgueret.Scriptorium.gschema.xml  com.github.cgueret.Scriptorium.metainfo.xml.in  com.github.cgueret.Scriptorium.service.in  io.github.cgueret.Scriptorium.gschema.xml  io.github.cgueret.Scriptorium.metainfo.xml  io.github.cgueret.Scriptorium.metainfo.xml.in  io.github.cgueret.Scriptorium.service.in  meson.build  scriptorium.gresource.xml
data/icons/: meson.build
data/ui/: Scriptorium.cmb  chapter_column.blp  editor.blp  editor.ui  editor_formatting.blp  editor_plotting.blp  editor_writing.blp  emulator.html  library.blp  library.ui  manuscript.blp  manuscript.ui  page2.ui  page2_tab1.ui  scene.blp  style.css  test.blp  window.blp  window.ui  writing.blp  writing.ui
data/ui/editor/: editor.blp  plotting.blp  plotting_entity.blp  plotting_overview.blp  writing.blp
po/: POTFILES.in  meson.build
scriptorium/: __init__.py  application.py  chapter_column.py  editor.py  editor_formatting.py  editor_plotting.py  editor_writing.py  globals.py  language_tool.py  library.py  main.py  meson.build  model.py  scene.py  scriptorium.gresource.xml  scriptorium.in  style.css  utils.py  window.blp  window.py  writing.py
scriptorium/dialog/: dialog_add.blp  dialog_add.py
scriptorium/dialogs/: __init__.py  dialog_add.blp  dialog_add.py  meson.build  preferences.blp  preferences.py  select_entities.blp  select_entities.py  select_scenes.blp  select_scenes.py  writer.blp  writer.py
scriptorium/editor/: chapter_column.blp  chapter_column.py  dialog_add_scene.blp  dialog_add_scene.py  editor-v1.blp  editor.blp  editor.py  editor_chapters.blp  editor_entity.py  editor_formatting.blp  editor_formatting.py  editor_overview.blp  editor_overview.py  editor_writing.blp  editor_writing.py  editor_writing_details.blp  editor_writing_details.py  emulator.html  formatting.py  multiline_entry_row.blp  multiline_entry_row.py  panel.blp  panel.py  plotting.blp  plotting.py  plotting_entity.py  plotting_overview.py  scene.blp  scene.py  test.blp  writer.blp  writer.py  writing.py
scriptorium/models/: __init__.py  annotation.py  chapter.py  commit_message.py  entity.py  image.py  library.py  link.py  manuscript.py  meson.build  project.py  resource.py  scene.py
scriptorium/templates/: content.xhtml  cover.xhtml
scriptorium/utils/: __init__.py  epub-novel.css  meson.build  publisher.py
scriptorium/views/: __init__.py  editor.blp  editor.py  editor_chapters.blp  editor_chapters.py  editor_chapters_details.blp  editor_chapters_details.py  editor_entities.blp  editor_entities.py  editor_entities_details.py  editor_formatting.blp  editor_formatting.py  editor_manuscript.blp  editor_manuscript.py  editor_overview.blp  editor_overview.py  editor_scenes.blp  editor_scenes.py  editor_scenes_details.blp  editor_scenes_details.py  library.blp  library.py  library_item.blp  library_item.py  meson.build
scriptorium/views/editor/: chapters.py  entities.blp  entities.py  meson.build
scriptorium/views/plan/: __init__.py  editor_entities.blp  editor_entities.py  editor_entities_details.blp  editor_entities_details.py  editor_images.blp  editor_images.py  editor_images_item.blp  editor_images_item.py  editor_manuscript.blp  editor_manuscript.py  editor_overview.blp  editor_overview.py  editor_overview_item.blp  editor_overview_item.py  editor_references_grid.blp  editor_references_grid.py  editor_references_item.blp  editor_scenes.blp  editor_scenes.py  editor_scenes_details.blp  editor_scenes_details.py  meson.build  page.blp  page.py
scriptorium/views/publish/: __init__.py  meson.build  page.blp  page.html  page.py
scriptorium/views/write/: __init__.py  meson.build  navigation.blp  navigation.py  navigation_item.blp  navigation_item.py  page.blp  page.py
scriptorium/widgets/: __init__.py  annotation.blp  annotation.py  cards_list.blp  cards_list.py  chapter.blp  chapter.py  chapter_column.blp  chapter_column.py  entity_card.blp  entity_card.py  manuscript.blp  manuscript.py  meson.build  multiline_entry_row.blp  multiline_entry_row.py  scene.blp  scene.py  text_view.blp  text_view.py  theme_selector.blp  theme_selector.py  writer_popover.blp  writer_popover.py
subprojects/: libpanel-1.wrap
