scriptorium_sources_views = [
	'__init__.py',
	'library.py',
	'editor.py',
	'editor_chapters.py',
	'editor_chapters_details.py',
	'editor_scenes.py',
	'editor_scenes_details.py',
	'editor_overview.py',
	'editor_manuscript.py',
]
install_data(scriptorium_sources_views, install_dir: moduledir / 'views')

subdir('plan')
subdir('write')
subdir('publish')

