scriptorium_sources_widgets = [
	'__init__.py',
	'chapter_column.py',
	'manuscript.py',
	'scene.py',
	'chapter.py',
	'multiline_entry_row.py',
	'cards_list.py',
	'entity_card.py',
	'theme_selector.py',
	'writer_popover.py',
]
install_data(scriptorium_sources_widgets, install_dir: moduledir / 'widgets')
