scriptorium_sources_views = [
	'__init__.py',
	'page.py',
	'editor_entities.py',
	'editor_entities_details.py',
	'editor_scenes.py',
	'editor_scenes_details.py',
	'editor_manuscript.py',
	'editor_overview.py',
	'editor_overview_item.py',
	'editor_images.py',
	'editor_images_item.py',
]
install_data(scriptorium_sources_views, install_dir: moduledir / 'views' / 'plan')
